--- a/Anasayfa.html
+++ b/Anasayfa.html
@@ -15,7 +15,7 @@
    
 
     <nav>
-        <div class="container clearfix">
+        <div class="container clearfix" >
              <div id="logo">
                 <a  href="Anasayfa.html" >KARADAG AYDINLATMA</a> 
              </div>
@@ -38,7 +38,7 @@
             
         </div>
     </nav>
-    <header style="padding-top: 8.5rem;">
+    <header>
         
         <div class="home-img">
        <div class="img-overlay-home">
