--- a/Urunlerimiz.html
+++ b/Urunlerimiz.html
@@ -39,9 +39,9 @@
             
         </div>
     </nav>
-    <main id="product" >
+    <main id="product">
      
-        <div class="container clearfix" style="margin-top: 3rem;">
+        <div class="container clearfix">
            <div class="col">
 					<div class="portfolio-item">
 						<a href="#">	
